# emerson-pheno-agent

./: .gitignore  README.md  pyproject.toml
results/: celiac_results.csv
results/celiac/json_results/: R200130574.json  R200452385.json  R200961637.json  R200995944.json  R201005482.json  R201611197.json  R201643869.json  R201910520.json  R202239786.json  R202764152.json  R202830629.json  R203024071.json  R203026601.json  R203271830.json  R203703666.json  R203884899.json  R204528963.json  R205005229.json  R205033168.json
src/: analyze_fps.py  generate_clinical_review.py  generate_eval_report.py  run_pipeline_parallel.sh  run_rest_temp.sh
src/pheno_agent/: __init__.py  config.py  llm.py  orchestrator.py  pipeline.py
src/pheno_agent/agents/: __init__.py  adjudicator.py  critic.py  data_gatherer.py  signal_extractor.py
src/pheno_agent/tools/: __init__.py  chroma_retriever.py  ehr_reader.py  keyword_scanner.py  lab_lookup.py
