[project]
name = "pheno-agent"
version = "0.1.0"
description = "A multi-agent phenotyping and diagnostic system for clinical data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.0",
    "ollama>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
